--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
-.App {
+h1{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.all-btns{
+  display:flex;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn-category{
+  width:100px;
+  height:35px;
+  border:2px solid #ededed;
+  background-color:#fdfdfd;
+  border-radius:5px;
+  cursor :pointer;
+  margin:5px;
+  /* padding:5px 20px; */
 }
